datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id         Int     @id @default(autoincrement())
  email      String  @unique
  password   String
  budgetMonths BudgetMonth[]
  categoryTemplates CategoryTemplate[]
} 

model BudgetMonth {
  id          Int                   @id @default(autoincrement())
  month       Int
  year        Int
  overBudget  Boolean @default(false)
  extraIncome String                @default("0")
  categories  BudgetMonthCategory[]
  user        User  @relation(fields: [userId], references: [id])
  userId      Int

  @@unique([month, year], name: "monthYear")
}

model BudgetMonthCategory {
  id             Int           @id @default(autoincrement())
  name           String
  amountBudgeted String
  budgetMonth    BudgetMonth   @relation(fields: [budgetMonthId], references: [id])
  budgetMonthId  Int
  transactions   Transaction[]
  // transactions   BudgetTransaction[]
  // Transaction    Transaction[]
}

model CategoryTemplate {
  id             Int    @id @default(autoincrement())
  name           String @unique
  amountBudgeted String
  user           User  @relation(fields: [userId], references: [id])
  userId         Int
}

// model BudgetTransaction {
//   id               Int @id @default(autoincrement())
//   budgetCategoryId Int
//   transactionId    Int

//   budgetCategory BudgetMonthCategory @relation(fields: [budgetCategoryId], references: [id])
//   transaction    Transaction         @relation(fields: [transactionId], references: [id])

//   @@unique([budgetCategoryId, transactionId])
// }

model Transaction {
  id                    Int                 @id @default(autoincrement())
  description           String
  amount                String
  date                  DateTime
  transactionType       String
  // budgetTransaction BudgetTransaction[]
  budgetMonthCategory   BudgetMonthCategory @relation(fields: [budgetMonthCategoryId], references: [id])
  budgetMonthCategoryId Int
}
